# PageDoctor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: data-protection-auditor.md  hexagonal-guard.md  pagedoctor-lookup.md
.claude/hooks/: data_protection_guard.sh  domain_purity.sh  lib.sh  py_format_type.sh  quality_gate.sh
.claude/skills/bookhub-branding/: SKILL.md
.claude/skills/bookhub-cdn/: SKILL.md
.claude/skills/german-eval/: SKILL.md
.claude/skills/github-subissues/: SKILL.md
.claude/skills/new-adapter/: SKILL.md
.claude/skills/new-domain-model/: SKILL.md
.claude/skills/new-migration/: SKILL.md
.claude/skills/new-port/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
addon/: .clasp.json  Code.gs  README.md  Sidebar.html  appsscript.json
docs/: DOCS_ADDON_SETUP.md  INTERNAL_ROLLOUT.md  METADATA_STORE.md  PAGEDOCTOR.md  PAGEDOCTOR_CONTEXT.md  PAGEDOCTOR_FEASIBILITY.md
scripts/: manual_google_check.py  manual_review_run.py
src/pagedoctor/: __main__.py  config.py  logging.py
src/pagedoctor/adapters/: pacing.py
src/pagedoctor/adapters/docx/: annotator.py
src/pagedoctor/adapters/google/: auth.py  comment_resolver.py  comments_output.py  comments_source.py  docs_source.py  docx_copy_output.py
src/pagedoctor/adapters/llm/: anthropic_provider.py
src/pagedoctor/adapters/persistence/: alembic.ini  crypto.py  finding_repository.py  models.py  run_repository.py
src/pagedoctor/app/: addon_auth.py  addon_routes.py  auth.py  container.py  doc_url.py  errors.py  main.py  routes.py  view_models.py
src/pagedoctor/app/static/: styles.css
src/pagedoctor/domain/: errors.py
tests/adapters/: test_anthropic_provider.py  test_anthropic_provider_live.py  test_comment_resolver.py  test_comments_output.py  test_comments_source.py  test_docx_annotator.py  test_docx_copy_output.py  test_finding_cipher.py  test_google_docs_source.py  test_pacing.py  test_postgres_finding_repository.py  test_postgres_run_repository.py  test_run_mapping.py
tests/fakes/: clock.py  comment_resolver.py  comments_source.py  document_source.py  finding_repository.py  llm.py  output.py  run_repository.py  web.py
tests/integration/: test_review_flow.py  test_web_flow.py
tests/unit/: test_addon_findings.py  test_addon_review.py  test_app.py  test_chunker.py  test_comment_format.py  test_config.py  test_consistency.py  test_doc_url.py  test_domain_purity.py  test_engine.py  test_fakes.py  test_finding_hygiene.py  test_finding_repository.py  test_idempotency.py  test_incremental.py  test_locator.py  test_models.py  test_prompt_builder.py  test_review_orchestrator.py
(+44 files in other folders)
