[project]
name = "pagedoctor"
version = "0.1.0"
description = "AI editing stage for BookHub manuscripts: posts a German first-pass edit into a creator's Google Doc as the editor Sophie Hoffmann."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

# Adapter libraries (SQLAlchemy, alembic, anthropic, google-*, psycopg) are added
# by the issues that introduce their adapter (#3-#6), not here.

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.2",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pagedoctor"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]

[tool.ruff.lint.isort]
known-first-party = ["pagedoctor"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
